// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bodyStringifier should not stringify when given a wrong bodyType 1`] = `
Array [
  "/api",
  Object {
    "body": Object {
      "age": undefined,
      "lang": "中文",
      "username": "Jo Jo",
    },
    "headers": Object {},
  },
]
`;

exports[`bodyStringifier should not stringify with non-plain-object or non-array 1`] = `
Array [
  "/api",
  Object {
    "body": Foo {},
    "headers": Object {},
  },
]
`;

exports[`bodyStringifier should not stringify with non-plain-object or non-array 2`] = `
Array [
  "/api",
  Object {
    "body": Map {},
    "headers": Object {},
  },
]
`;

exports[`bodyStringifier should not stringify with non-plain-object or non-array 3`] = `
Array [
  "/api",
  Object {
    "body": true,
    "headers": Object {},
  },
]
`;

exports[`bodyStringifier should not stringify with non-plain-object or non-array 4`] = `
Array [
  "/api",
  Object {
    "body": null,
    "headers": Object {},
  },
]
`;

exports[`bodyStringifier should stringify form 1`] = `
Array [
  "/api",
  Object {
    "body": "username=Jo%20Jo&lang=%E4%B8%AD%E6%96%87&age=",
    "headers": Object {
      "content-type": "application/x-www-form-urlencoded",
    },
  },
]
`;

exports[`bodyStringifier should stringify form 2`] = `
Array [
  "/api",
  Object {
    "body": "0=1&1=2&2=true",
    "headers": Object {
      "content-type": "application/x-www-form-urlencoded",
    },
  },
]
`;

exports[`bodyStringifier should stringify json 1`] = `
Array [
  "/api",
  Object {
    "body": "{\\"username\\":\\"Jo Jo\\",\\"lang\\":\\"中文\\"}",
    "headers": Object {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodyStringifier should stringify json 2`] = `
Array [
  "/api",
  Object {
    "body": "[1,2,true]",
    "headers": Object {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodyStringifier should work without options 1`] = `
Array [
  "/api",
  Object {
    "body": undefined,
    "headers": Object {},
  },
]
`;
